# videoagent

./: .gitignore  README.md  __init__.py  agent.py  analyzer.py  dev_stack.sh  editor.py  find_reasoning.py  gcs_all_files.txt  gemini.py  inspect_agents.py  inspect_litellm_model.py  inspect_model_settings.py  inspect_run_config.py  library.py  locate_litellm_model.py  navan_sap_animation.html  requirements.txt  story.py  travel_text_gsap_animation.html  videoagent.db  videoagent_1.db  voice.py
backend/: README.md  alembic.ini  debug_session.py  fetch_elevenlabs_voices.py  pyproject.toml  query_companies.py  requirements.txt  streamlit_app.py  test_generation.py  verify_db.py  verify_voiceover.py  videoagent.db
backend/alembic/: env.py
backend/notebooks/: story_playground.ipynb
backend/scripts/: backfill_to_gcs.py  debug_library.py  generate_voiceover_v2_samples.py  generate_voiceover_v3_samples.py  import_merged_prospects.py  migrate_audio_removal.py  migrate_customers.py  migrate_json_session_state_to_db.py  normalize_navan_assets.py  persist_testimony_digests_from_output.py  preupload_library.py  rename_gcs_transcripts_from_mapping.py  run_api.py  run_basic_tests.py  run_scene_analysis_prompt.py  run_testimony_digest_prompt.py  verify_agent_model_basic.py  verify_agents_litellm_video_offset_sweep.py  verify_agents_litellm_video_visibility.py  verify_gemini_offset_timestamp_behavior.py  verify_generate_scene.py  verify_generate_voice_overs.py  verify_generate_voiceover_v2.py  verify_generate_voiceover_v3.py  verify_match_scene.py  verify_voiceless.py
backend/src/: verify_imports.py
backend/tests/: conftest.py  test_agent_strict_schemas.py  test_agent_timestamp_parsing.py  test_api_media_urls.py  test_api_session_titles.py  test_candidates.py  test_gemini_retry.py  (+7 more)
(+185 files in other folders)
